load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "nikon",
    srcs = ["ls_sec.go"],
    cdeps = ["//nikon/ls_sec:cgo"],
    cgo = True,
    importpath = "github.com/attilaolah/birdcam/nikon",
    visibility = ["//visibility:public"],
)

go_test(
    name = "nikon_test",
    srcs = ["ls_sec_test.go"],
    embed = [":nikon"],
)
