load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "coolpix_a900_lib",
    srcs = [
        "a900.go",
        "scan.go",
    ],
    importpath = "github.com/attilaolah/birdcam/nikon/coolpix_a900",
    visibility = ["//cmd:__subpackages__"],
    deps = [
        "//nikon:ls_sec_go",
        "@com_github_go_ble_ble//:ble",
        "@com_github_go_ble_ble//linux",
        "@org_tinygo_x_bluetooth//:bluetooth",
    ],
)
