load("//cmd/patch_so:patch_so.bzl", "patched_so")

cc_binary(
    name = "x86_64",
    srcs = [
        "x86_64.cc",
        ":ls_sec",
        ":w",
    ],
)

patched_so(
    name = "ls_sec",
    src = "//third_party/snapbridge:ls_sec_jni_so",
    patch_str = {
        # Match rule name.
        "libLsSec-jni.so": "libls_sec.so",
        # Rename `libc.so` dependency to `libw.so`, then give it a custom one:
        "libc.so": "libw.so",
        # Also rename its version string:
        "LIBC": "LIBW",
    },
    # Cannot remove libc.so dependency without also removing its version from the map.
    remove_deps = [
        # keep sorted
        "libdl.so",
        "libm.so",
    ],
)

cc_library(
    name = "w",
    srcs = ["w.cc"],
    linkstatic = False,
)
