load("//cmd/patch_so:patch_so.bzl", "patched_so")

cc_binary(
    name = "x86_64",
    srcs = [
        "x86_64.cc",
        ":ls_sec",
        ":w",
    ],
)

patched_so(
    name = "ls_sec",
    src = "//third_party/snapbridge:ls_sec_jni_so",
    patch_str = {
        # Match rule name.
        "libLsSec-jni.so": "libls_sec.so",
    },
    # Cannot remove libc.so dependency without also removing its version from the map.
    remove_deps = [
        # keep sorted
        "libc.so",
        "libdl.so",
        "libm.so",
        "libstdc++.so",
    ],
)

cc_library(
    name = "w",
    srcs = ["w.cc"],
    linkstatic = False,
)
